[package]
name = "piece-tree"
version = "0.1.0"
edition = "2024"

[features]
default = ["write"]

no_std = []
no_std_nightly_simd = ["runtime-dispatch-simd"]

write = []

runtime-dispatch-simd = ["bytecount/runtime-dispatch-simd"]
generic-simd = ["bytecount/generic-simd"]

[dependencies]
bytecount        = { version = "=0.6.9",   default-features = false }
cranelift-entity = { version = "=0.132.0", default-features = false }
smallvec         = { version = "=1.15.1",  default-features = false, features = ["const_generics"] }

[dev-dependencies]
rand = "0.8"
proptest  = "1.4"
criterion = "0.5"
fastrand  = "2.4.1"

[[bench]]
name = "piece_tree_bench"
harness = false

[[bench]]
name = "insert"
harness = false

[[bench]]
name = "remove"
harness = false

[profile.release-fast]
inherits = "release"
opt-level = 3
panic = "abort"
codegen-units = 1
lto = "fat"
debug = false
strip = true
debug-assertions = false
overflow-checks = false
