[package]
name = "piece-tree"
version = "0.1.0"
edition = "2024"
authors = ["Mark Tyrkba <marktyrkba456@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Purely functional (immutable) implementation of Piece Tree, inspired by fredbuf"
categories = [
    "data-structures",
    "text-processing",
    "no-std",
]
keywords = [
    "piece-tree",
    "piece-table",
    "immutable",
    "text-buffer",
    "vendor"
]
repository = "https://github.com/rakivo/e2-piece-tree"
readme = "README.md"

[features]
default = ["write"]

no_std = []
no_std_nightly_simd = ["runtime-dispatch-simd"]

write = []

dont_vendor = ["dep:bytecount", "dep:cranelift-entity", "dep:smallvec"]

runtime-dispatch-simd = ["bytecount?/runtime-dispatch-simd"]
generic-simd = ["bytecount?/generic-simd"]

[dependencies]
bytecount        = { version = "=0.6.9",  default-features = false, optional = true }
cranelift-entity = { version = "=0.132.0",default-features = false, optional = true }
smallvec         = { version = "=1.15.1", default-features = false, optional = true, features = ["const_generics"] }

[dev-dependencies]
rand      = "0.8"
proptest  = "1.4"
criterion = "0.5"
fastrand  = "2.4.1"

[[bench]]
name = "piece_tree_bench"
harness = false

[[bench]]
name = "insert"
harness = false

[[bench]]
name = "remove"
harness = false
